list(POP_FRONT): Fix always assigning first item to output vars

Fixes: #19436